Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20618

Assertion `btr_validate_index(index, 0, false)' failed in row_upd_sec_index_entry

    XMLWordPrintable

Details

    Description

      --source include/have_innodb.inc
       
      create table t1 ( a bit(15), va bit(10) generated always as (a),pk int, primary key (pk), unique key (va)) engine=innodb;
       
      insert ignore into t1 values ( '\r1','a',1);
      replace into t1 (pk) values (1);
      

      10.2 273d8eb12c40a6dc

      #3  <signal handler called>
      #4  0x00007f369b694428 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54
      #5  0x00007f369b69602a in __GI_abort () at abort.c:89
      #6  0x00007f369b68cbd7 in __assert_fail_base (fmt=<optimized out>, assertion=assertion@entry=0x560a446b8248 "btr_validate_index(index, 0, false)", file=file@entry=0x560a446b7cc8 "/10.2/storage/innobase/row/row0upd.cc", line=line@entry=2440, function=function@entry=0x560a446bae00 <row_upd_sec_index_entry(upd_node_t*, que_thr_t*)::__PRETTY_FUNCTION__> "dberr_t row_upd_sec_index_entry(upd_node_t*, que_thr_t*)") at assert.c:92
      #7  0x00007f369b68cc82 in __GI___assert_fail (assertion=0x560a446b8248 "btr_validate_index(index, 0, false)", file=0x560a446b7cc8 "/10.2/storage/innobase/row/row0upd.cc", line=2440, function=0x560a446bae00 <row_upd_sec_index_entry(upd_node_t*, que_thr_t*)::__PRETTY_FUNCTION__> "dberr_t row_upd_sec_index_entry(upd_node_t*, que_thr_t*)") at assert.c:101
      #8  0x0000560a441b35e0 in row_upd_sec_index_entry (node=0x7f3640186a50, thr=0x7f3640084fa8) at /10.2/storage/innobase/row/row0upd.cc:2440
      #9  0x0000560a441b3c7f in row_upd_sec_step (node=0x7f3640186a50, thr=0x7f3640084fa8) at /10.2/storage/innobase/row/row0upd.cc:2554
      #10 0x0000560a441b5ef9 in row_upd (node=0x7f3640186a50, thr=0x7f3640084fa8) at /10.2/storage/innobase/row/row0upd.cc:3310
      #11 0x0000560a441b624b in row_upd_step (thr=0x7f3640084fa8) at /10.2/storage/innobase/row/row0upd.cc:3427
      #12 0x0000560a4415e8ad in row_update_for_mysql (prebuilt=0x7f3640185f08) at /10.2/storage/innobase/row/row0mysql.cc:1828
      #13 0x0000560a44023b91 in ha_innobase::delete_row (this=0x7f36401850c8, record=0x7f364000a5e0 "\241\r1\001") at /10.2/storage/innobase/handler/ha_innodb.cc:9136
      #14 0x0000560a43ce7516 in handler::ha_delete_row (this=0x7f36401850c8, buf=0x7f364000a5e0 "\241\r1\001") at /10.2/sql/handler.cc:6149
      #15 0x0000560a43a347fe in write_record (thd=0x7f3640000b00, table=0x7f36400099c0, info=0x7f368c4fa360) at /10.2/sql/sql_insert.cc:1905
      #16 0x0000560a43a323f6 in mysql_insert (thd=0x7f3640000b00, table_list=0x7f3640012550, fields=..., values_list=..., update_fields=..., update_values=..., duplic=DUP_REPLACE, ignore=false) at /10.2/sql/sql_insert.cc:1066
      #17 0x0000560a43a59414 in mysql_execute_command (thd=0x7f3640000b00) at /10.2/sql/sql_parse.cc:4167
      #18 0x0000560a43a64bc9 in mysql_parse (thd=0x7f3640000b00, rawbuf=0x7f3640012468 "replace into t1 (pk) values (1)", length=31, parser_state=0x7f368c4fb080, is_com_multi=false, is_next_command=false) at /10.2/sql/sql_parse.cc:7759
      #19 0x0000560a43a52e8c in dispatch_command (command=COM_QUERY, thd=0x7f3640000b00, packet=0x7f3640096131 "replace into t1 (pk) values (1)", packet_length=31, is_com_multi=false, is_next_command=false) at /10.2/sql/sql_parse.cc:1831
      #20 0x0000560a43a517a0 in do_command (thd=0x7f3640000b00) at /10.2/sql/sql_parse.cc:1385
      #21 0x0000560a43ba7795 in do_handle_one_connection (connect=0x560a465941d0) at /10.2/sql/sql_connect.cc:1336
      #22 0x0000560a43ba7500 in handle_one_connection (arg=0x560a465941d0) at /10.2/sql/sql_connect.cc:1241
      #23 0x0000560a443d4168 in pfs_spawn_thread (arg=0x560a4659efc0) at /10.2/storage/perfschema/pfs.cc:1862
      #24 0x00007f369c2d16ba in start_thread (arg=0x7f368c4fc700) at pthread_create.c:333
      #25 0x00007f369b76641d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109
      
      

      Attachments

        Issue Links

          Activity

            People

              nikitamalyavin Nikita Malyavin
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 8d 6.75h
                  8d 6.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.