MDEV-20618 Assertion `btr_validate_index...' failed in row_upd_sec_index_entry

Add a proper error handling of innobase_get_computed_value results in row_upd_store_row/row_upd_store_v_row.

Also add an assertion in row_vers_build_clust_v_col to fail during row purge.
Add one more assertion in row_sel_sec_rec_is_for_clust_rec for possible future catches.