storage/innobase/row/row0upd.cc
@@ -2109,9 +2109,11 @@ row_upd_eval_new_vals(
 @param[in,out]	node		row update node
 @param[in]	update		an update vector if it is update
 @param[in]	thd		mysql thread handle
-@param[in,out]	mysql_table	mysql table object */
+@param[in,out]	mysql_table	mysql table object
+@return DB_COMPUTE_VALUE_FAILED if virtual column value computation fails
+ 	DB_SUCCESS else. */
 static
-void
+dberr_t
 row_upd_store_v_row(
 	upd_node_t*	node,
 	const upd_t*	update,
@@ -2173,24 +2175,33 @@ row_upd_store_v_row(
 								  &mysql_table);
 					/* Need to compute, this happens when
 					deleting row */
-					innobase_get_computed_value(
-						node->row, col, index,
-						&vc.heap, node->heap,
-						NULL, thd, mysql_table,
-						record, NULL, NULL, NULL);
+					dfield_t* vfield =
+						innobase_get_computed_value(
+							node->row, col, index,
+							&vc.heap, node->heap,
+							NULL, thd, mysql_table, 
+							record, NULL, NULL,
+							NULL);
+					if (vfield == NULL) {
+						return DB_COMPUTE_VALUE_FAILED;
+					}
 				}
 			}
 		}
 	}
+
+	return DB_SUCCESS;
 }
 
 /** Stores to the heap the row on which the node->pcur is positioned.
 @param[in]	node		row update node
 @param[in]	thd		mysql thread handle
 @param[in,out]	mysql_table	NULL, or mysql table object when
-				user thread invokes dml */
+				user thread invokes dml 
+@return DB_COMPUTE_VALUE_FAILED if virtual column value computation fails
+ 	DB_SUCCESS else. */
 static
-void
+dberr_t
 row_upd_store_row(
 	upd_node_t*	node,
 	THD*		thd,
@@ -2234,8 +2245,13 @@ row_upd_store_row(
 			      NULL, NULL, NULL, ext, node->heap);
 
 	if (node->table->n_v_cols) {
-		row_upd_store_v_row(node, node->is_delete ? NULL : node->update,
+		dberr_t err = row_upd_store_v_row(node,
+				    node->is_delete ? NULL : node->update,
 				    thd, mysql_table);
+		if (err != DB_SUCCESS) {
+			ut_ad(err == DB_COMPUTE_VALUE_FAILED);
+			return err;
+		}
 	}
 
 	if (node->is_delete == PLAIN_DELETE) {
@@ -2250,6 +2266,7 @@ row_upd_store_row(
 	if (UNIV_LIKELY_NULL(heap)) {
 		mem_heap_free(heap);
 	}
+	return DB_SUCCESS;
 }
 
 /***********************************************************//**
@@ -2966,9 +2983,13 @@ row_upd_del_mark_clust_rec(
 	/* Store row because we have to build also the secondary index
 	entries */
 
-	row_upd_store_row(node, trx->mysql_thd,
+	err = row_upd_store_row(node, trx->mysql_thd,
 			  thr->prebuilt  && thr->prebuilt->table == node->table
 			  ? thr->prebuilt->m_mysql_table : NULL);
+	if (err != DB_SUCCESS)
+	{
+		return err;
+	}
 
 	/* Mark the clustered index record deleted; we do not have to check
 	locks, because we assume that we have an x-lock on the record */
@@ -3186,8 +3207,11 @@ row_upd_clust_step(
 		goto exit_func;
 	}
 
-	row_upd_store_row(node, trx->mysql_thd,
+	err = row_upd_store_row(node, trx->mysql_thd,
 			  thr->prebuilt ? thr->prebuilt->m_mysql_table : NULL);
+	if (err != DB_SUCCESS) {
+		goto exit_func;
+	}
 
 	if (row_upd_changes_ord_field_binary(index, node->update, thr,
 					     node->row, node->ext)) {
